# ML-Zoomcamp-2025

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
classification/: homework.ipynb
decision_trees/: homework.ipynb
deep_learning/: homework.ipynb
deployment/: Dockerfile
deployment/homework/: customer_test_app.py  predict.py  predict_app.py
deployment/workshop/: test.py  workshop-uv-fastapi.ipynb
evaluation/: homework.ipynb
intro/: homework.ipynb
kubernetes/: deployment.yaml
regression/: homework_alt.ipynb  homework_regression.ipynb
serverless/: Dockerfile  check_model.ipynb  lambda_function.py  predict_test.py  pyproject.toml
