[project]
name = "ml-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.120.3",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "torch==2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "uvicorn>=0.38.0",
    "wget>=3.2",
    "xgboost>=3.1.1",
]
